@@ -4,6 +4,7 @@ XXXXXXXX
 - El correo muestra la fecha y hora en formato internacional
 - Se ha añadido un selector por meses para mostrar documentos cerrados
 - Ahora no recorta los datetimes con 00 segundos
+- Ahora members es un set, no un list
 
 20130208
 ========
